<resources>
    <string name="app_name">Invoice Total</string>
    <string name="subtotalView">Subtotal</string>
    <string name="discountPercentView">Discount Percent:</string>
    <string name="discountAmountView">Discount Amount:</string>
    <string name="totalView">Total:</string>
    <string name="subtotalEdit">0</string>
    <string name="discountView">10%</string>
    <string name="discountAmount">$15.00</string>
    <string name="total">$135.00</string>
</resources>
