<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/subtotalView"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/subtotalView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discountPercentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/discountPercentView"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/subtotalView"
        app:layout_constraintTop_toBottomOf="@+id/subtotalView" />

    <TextView
        android:id="@+id/discountAmountView"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/discountAmountView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/discountPercentView"
        app:layout_constraintTop_toBottomOf="@+id/discountPercentView" />

    <TextView
        android:id="@+id/totalView"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/totalView"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/total"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/discountAmountView"
        app:layout_constraintTop_toBottomOf="@+id/discountAmountView" />

    <TextView
        android:id="@+id/discountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discountView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/subtotalEdit"
        app:layout_constraintTop_toTopOf="@+id/discountPercentView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/discountAmount"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/discountView"
        app:layout_constraintTop_toBottomOf="@+id/discountView" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/totalView" />

    <EditText
        android:id="@+id/subtotalEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:ems="6"
        android:inputType="textPersonName"
        android:text="@string/subtotalEdit"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/discountPercentView"
        app:layout_constraintTop_toTopOf="@+id/subtotalView" />
</androidx.constraintlayout.widget.ConstraintLayout>